--- a/Dockerfile.direct
+++ b/Dockerfile.direct
@@ -10,15 +10,12 @@ RUN cd backend && npm ci --only=production
 COPY frontend/package*.json ./frontend/
 RUN cd frontend && npm ci
 
-# Install vite globally to avoid permission issues
-RUN npm install -g vite
-
 # Copy source code
 COPY backend/ ./backend/
 COPY frontend/ ./frontend/
 
-# Build frontend using global vite
-RUN cd frontend && vite build
+# Build frontend using node directly
+RUN cd frontend && node node_modules/vite/bin/vite.js build
 
 # Production stage
 FROM node:18-alpine AS runtime
