--- a/railway.toml
+++ b/railway.toml
@@ -1,33 +1,13 @@
 [build]
 builder = "NIXPACKS"
-dockerfilePath = "Dockerfile"
+dockerfilePath = "Dockerfile.simple"
 
 [deploy]
 healthcheckPath = "/health"
-healthcheckTimeout = 300
+healthcheckTimeout = 1000
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
 [variables]
 NODE_ENV = "production"
 PORT = "8080"
-
-# Database (Railway provides these automatically)
-# DATABASE_URL = (set by Railway)
-# REDIS_URL = (set by Railway)
-
-# Security (Generate new ones for production)
-JWT_SECRET = "your-jwt-secret-here"
-JWT_REFRESH_SECRET = "your-jwt-refresh-secret-here" 
-ENCRYPTION_KEY = "your-encryption-key-here"
-
-# Optional APIs
-SERP_API_KEY = ""
-TWILIO_ACCOUNT_SID = ""
-TWILIO_AUTH_TOKEN = ""
-GOOGLE_GBP_API_KEY = ""
-
-# App Configuration
-APP_BASE_URL = "https://bizvibe-production-fc8d.up.railway.app"
-BACKUP_DIRECTORY = "./backups"
-BACKUP_CRON = "0 2 * * *"
