--- a/Dockerfile.simple
+++ b/Dockerfile.simple
@@ -15,17 +15,27 @@ RUN npm install -g vite
 # Build frontend
 RUN cd frontend && vite build
 
-# Production stage - SIMPLE HTTP server
+# Production stage - FULL STACK server
 FROM node:18-alpine AS runtime
 
 WORKDIR /app
 
+# Install backend dependencies
+COPY backend/package*.json ./backend/
+RUN cd backend && npm ci --only=production
+
+# Copy backend source
+COPY backend/ ./backend/
+
 # Copy built frontend
 COPY --from=builder /app/frontend/dist ./public
 
-# Copy simple server
-COPY server.js ./
+# Install express and cors for the server
+RUN npm install express cors
+
+# Copy Express server
+COPY serve.js ./
 
 EXPOSE 8080
 
-CMD ["node", "server.js"]
+CMD ["node", "serve.js"]
