--- a/railway.toml
+++ b/railway.toml
@@ -4,7 +4,7 @@ dockerfilePath = "Dockerfile.simple"
 
 [deploy]
 healthcheckPath = "/health"
-healthcheckTimeout = 100
+healthcheckTimeout = 10000
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
@@ -16,12 +16,12 @@ PORT = "8080"
 # DATABASE_URL = (provided by Railway)
 # REDIS_URL = (provided by Railway)
 
-# Security (Generate new ones for production)
-JWT_SECRET = "generate-new-jwt-secret-here-32-chars-min"
-JWT_REFRESH_SECRET = "generate-new-jwt-refresh-secret-here-32-chars-min"
-ENCRYPTION_KEY = "generate-new-encryption-key-here-32-chars"
+# Security Keys (REQUIRED for backend to work)
+JWT_SECRET = "your-production-jwt-secret-here-32-chars-minimum"
+JWT_REFRESH_SECRET = "your-production-jwt-refresh-secret-here-32-chars-minimum"
+ENCRYPTION_KEY = "your-production-encryption-key-here-32-chars-minimum"
 
-# Optional APIs (leave empty if not using)
+# Optional APIs
 SERP_API_KEY = ""
 TWILIO_ACCOUNT_SID = ""
 TWILIO_AUTH_TOKEN = ""
