--- a/Dockerfile.simple
+++ b/Dockerfile.simple
@@ -23,15 +23,15 @@ WORKDIR /app
 # Copy built frontend
 COPY --from=builder /app/frontend/dist ./public
 
-# Install backend dependencies (for future use)
+# Install backend dependencies
 COPY backend/package*.json ./backend/
 RUN cd backend && npm ci --only=production
 
 # Copy backend source
 COPY backend/ ./backend/
 
-# Copy lightning-fast server (no extra dependencies needed)
-COPY server.lightning.js ./serve.js
+# Copy fast server with background backend loading
+COPY server.fast.js ./serve.js
 
 EXPOSE 8080
 
